semantic-ui init

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -1,2 +1,11 @@
 /font-awesome
 /iron-router
+/bootstrap-3
+/ogno-admin
+/autoform
+/pagination-mini
+/semantic-ui
+/simple-schema
+/moment
+/collection2
+/filepicker
